--- a/templates/base.html
+++ b/templates/base.html
@@ -171,7 +171,7 @@
 
     }
 
-    function removeLoader(obj, newHTML) {
+    function removeLoaderUI(obj, newHTML) {
         obj.style.removeProperty('height');
         obj.style.removeProperty('width');
 
