--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -2,9 +2,11 @@
 {% block title %}My Profile{% endblock title %}
 {% block body %}
 
-USER PROFILE - {{user}}
+USER PROFILE - {{user}} <br>
+<a href="/automationcreator">Create</a><br>
 <br><br>
 
-<a href="/logout">Logout</a>
+<a href="/logout">Logout</a><br>
+
 
 {% endblock body %}
