--- a/static/style.css
+++ b/static/style.css
@@ -77,6 +77,35 @@ hr {
     border: 1px solid #555;
 }
 
+textarea::placeholder {
+    color: black;
+}
+textarea:hover {
+    background-color: #888;
+}
+
+textarea:required {
+    border: 1px solid var(--YELLOWISH__fade1);
+}
+
+textarea:focus {
+    transform: translate(-3px, -3px);
+    background-color: var(--ORANGEISH__fade1);
+    font-weight: 500;
+}
+
+textarea {
+    transition: 0.2s;
+    border: none;
+    outline: none;
+    padding: 5px;
+    margin: 3px;
+    border-radius: 5px;
+    background-color: #666;
+    width: 250px;
+}
+
+
 input[type='checkbox']:focus {
     transform: translate(0, 0);
 }
@@ -590,6 +619,8 @@ button {
     user-select: none;
     font-size: 15px;
     margin: 5px 0;
+    width:auto;
+    /* word-wrap: normal; */
 }
 
 /* FOR PHONES */
