--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
         integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/style.css">
     <title>jido - {% block title %}{% endblock title %}</title>
 </head>
+
+<!-- Global Functions -->
+<script>
+
+    function pushLoaderUI(obj) {
+        
+        obj.style.height = String(obj.offsetHeight) + 'px'; obj.style.width = String(obj.offsetWidth) + 'px';
+
+        obj.innerHTML = `<img class="loading-gif-img" src="https://i.pinimg.com/originals/a4/f2/cb/a4f2cb80ff2ae2772e80bf30e9d78d4c.gif" alt="">`;
+
+    }
+
+    function removeLoaderUI(obj, newHTML) {
+        obj.style.removeProperty('height');
+        obj.style.removeProperty('width');
+
+        obj.innerHTML = newHTML;
+    }
+
+</script>
 
 <body>
 
@@ -160,23 +181,6 @@
 
 </body>
 {% block postdoc_script %}{% endblock postdoc_script %}
-<script>
 
-    function pushLoaderUI(obj) {
-        
-        obj.style.height = String(obj.offsetHeight) + 'px'; obj.style.width = String(obj.offsetWidth) + 'px';
-
-        obj.innerHTML = `<img class="loading-gif-img" src="https://i.pinimg.com/originals/a4/f2/cb/a4f2cb80ff2ae2772e80bf30e9d78d4c.gif" alt="">`;
-
-    }
-
-    function removeLoaderUI(obj, newHTML) {
-        obj.style.removeProperty('height');
-        obj.style.removeProperty('width');
-
-        obj.innerHTML = newHTML;
-    }
-
-</script>
 
 </html>
